--- a/styles.css
+++ b/styles.css
@@ -924,6 +924,41 @@ body {
   background-color: #4c4c4c;
 }
 
+.file-item-install-badge {
+  flex-shrink: 0;
+  font-size: 10px;
+  padding: 2px 6px;
+  border-radius: 3px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.file-item-install-local {
+  background-color: #0e639c;
+  color: #fff;
+}
+
+.file-item-install-global {
+  background-color: #2d2d30;
+  color: #858585;
+}
+
+.preview-tag-location {
+  background-color: #0e639c;
+  color: #fff;
+  cursor: default;
+}
+
+.tag-group-location .tag-header {
+  color: #4ec9b0;
+}
+
+.metadata-install-path {
+  word-break: break-all;
+  font-size: 12px;
+  color: #858585;
+}
+
 .file-item.active {
   border-left: 3px solid #4ec9b0;
   padding-left: 9px;
